crypto_trader/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: crawler-platform
  labels:
    name: crawler-platform
