crypto_trader/celery-beat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: celery-beat
        image: bitsean/crypto_trader:1.6
        command: ['celery', '-A', 'crypto_trader', 'beat', '-l', 'info', '--scheduler', 'django_celery_beat.schedulers:DatabaseScheduler']
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
