crypto_trader/celery-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app.kubernetes.io/instance: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: celery-worker
        image: bitsean/crypto_trader:1.6
        command: ["celery", "-A", "crypto_trader", "worker", "-l", "info"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
