crypto_trader/crawlab-master-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: crawlab-master
  labels:
    app: crawlab-master
spec:
  ports:
    - port: 8000
  selector:
    app: crawlab-master
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: crawlab-master
  labels:
    app: crawlab-master
spec:
  selector:
    matchLabels:
      app: crawlab-master
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crawlab-master
    spec:
      containers:
      - image: bitsean/crawlab-backend:0.3
        name: crawlab-master
        ports:
        - containerPort: 8000
