crypto_trader/crawlab-worker-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: crawlab-worker
  namespace: crawler-platform
  labels:
    app: crawlab-worker
spec:
  ports:
    - port: 8000
  selector:
    app: crawlab-worker
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: crawlab-worker
  namespace: crawler-platform
  labels:
    app: crawlab-worker
spec:
  selector:
    matchLabels:
      app: crawlab-worker
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      namespace: crawler-platform
      labels:
        app: crawlab-worker
    spec:
      containers:
      - image: bitsean/crawlab-backend:0.3
        name: crawlab-worker
        ports:
        - containerPort: 8000
