crypto_trader/mongo-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler-mongo
  namespace: crawler-platform
  labels:
    app: crawler-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: crawler-mongo
    tier: mongo
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: crawler-mongo
  namespace: crawler-platform
  labels:
    app: crawler-mongo
spec:
  selector:
    matchLabels:
      app: crawler-mongo
      tier: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: crawler-platform
      labels:
        app: crawler-mongo
        tier: mongo
    spec:
      containers:
      - image: mongo
        name: mongo
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
