crypto_trader/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler-mysql
  namespace: crawler-platform
  labels:
    app: crawler
spec:
  ports:
    - port: 3306
  selector:
    app: crawler
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: crawler-mysql
  namespace: crawler-platform
  labels:
    app: crawler
spec:
  selector:
    matchLabels:
      app: crawler
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: crawler-platform
      labels:
        app: crawler
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
