crypto_trader/redis-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: crawler-redis
  labels:
    app: crawler-redis
spec:
  ports:
    - port: 6379
  selector:
    app: crawler-redis
    tier: redis
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: crawler-redis
  labels:
    app: crawler-redis
spec:
  selector:
    matchLabels:
      app: crawler-redis
      tier: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crawler-redis
        tier: redis
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pv-claim
