crypto_trader/socket-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: socket
  labels:
    app: socket
spec:
  ports:
    - port: 8765
  selector:
    app: socket
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: socket
  labels:
    app: socket
spec:
  selector:
    matchLabels:
      app: socket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
      - image: bitsean/socket:0.1.0
        name: socket
        command: ["python", "huobi.py"]
        ports:
        - containerPort: 8765
