crypto_trader/spa-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: spa
  labels:
    app: spa
spec:
  ports:
    - port: 5000
  selector:
    app: spa
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: spa
  labels:
    app: spa
spec:
  selector:
    matchLabels:
      app: spa
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spa
    spec:
      containers:
      - image: bitsean/spa:0.1.0
        name: spa
        # command: ["python", "huobi.py"]
        ports:
        - containerPort: 5000
