crypto_trader/crawlab-master-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crawlab-master-ingress
  namespace: crawler-platform
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - crawlab-master.cuteyj.top
    secretName: crawlab-master-letsencrypt-prod
  rules:
  - host: crawlab-master.cuteyj.top
    http:
      paths:
      - backend:
          serviceName: crawlab-master
          servicePort: 8000
