crypto_trader/socket-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socket-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - socket.cuteyj.top
    secretName: socket-letsencrypt-prod
  rules:
  - host: socket.cuteyj.top
    http:
      paths:
      - backend:
          serviceName: socket
          servicePort: 8765
